--- a/part/intrusion.tex
+++ b/part/intrusion.tex
@@ -1035,78 +1035,30 @@ IOC являются ключевым элементом для аналитик
 
 \subsection{Развитие систем распознавания вторжений}
 
+Системы обнаружения вторжений прошли долгий путь от простых сканеров логов до сложных, многокомпонентных платформ. Их развитие можно условно разделить на практическое -- совершенствование существующих технологий и создание новых классов продуктов, и теоретическое -- поиск фундаментальных подходов к описанию и противодействию угрозам.
+
 \subsubsection{Развитие практических аспектов СОВ}
 
-Коммерческое использование СОВ находится в стадии формирования. Некоторые коммерческие
-СОВ получили негативную публичную оценку за большое число ложных срабатываний, неудобные
-интерфейсы управления и получения отчетов, огромное количество отчетов об атаках,
-плохое масштабирование и плохую интеграцию с системами сетевого управления. Тем не менее
-потребность в хороших СОВ возрастает, поэтому с большой вероятностью эти проблемы будут
-успешно решаться в ближайшее время.
+Ранние коммерческие СОВ действительно страдали от проблем, упомянутых в \autocite{IDSClassification}: большого количества ложных срабатываний, неудобных интерфейсов и сложностей с масштабированием. Однако, по аналогии с антивирусным ПО, современные системы стали значительно более зрелыми и эффективными. Ключевые практические тенденции их развития включают:
 
-Ожидается, что улучшение качества функционирования СОВ будет осуществляться аналогично
-антивирусному ПО. Раннее антивирусное ПО создавало большое число ложных тревог при
-нормальных действиях пользователя и не определяло все известные вирусы. Однако сейчас
-положение существенно улучшилось, антивирусное ПО стало прозрачным для пользователей
-и достаточно эффективным.
-
-Более того – очень вероятно, что основные возможности СОВ скоро станут ключевыми в
-сетевой инфраструктуре (такой как роутеры, мосты и коммутаторы) и в операционных системах.
-При этом, скорее всего, разработчики СОВ сфокусируют свое внимание на решении проблем,
-связанных с масштабируемостью и управляемостью СОВ.
-
-Имеются также и другие тенденции, которые, скорее всего, будут влиять на функциональности
-СОВ следующего поколения. Существует заметное движение в сторону аппаратно-программных
-(appliance) решений для СОВ. Также вероятно, что в будущем некоторые функции определения
-соответствия шаблону могут быть реализованы в аппаратуре, что увеличит скорость обработки.
-
-Наконец, механизмы, связанные с управлением рисками в области сетевой безопасности,
-будут оказывать влияние на требования к СОВ.
-
-
+\begin{itemize}
+    \item \textbf{Применение машинного обучения и поведенческого анализа (UEBA):} современные СОВ и SIEM все чаще используют алгоритмы машинного обучения и анализа поведения пользователей и сущностей (User and Entity Behavior Analytics, UEBA). Вместо того чтобы полагаться только на известные сигнатуры, системы строят профиль нормальной активности для каждого пользователя или хоста и выявляют статистически значимые отклонения от него. Это позволяет обнаруживать ранее неизвестные атаки и внутренние угрозы (например, действия скомпрометированного или инсайдерского аккаунта).
+    \item \textbf{Облачные СОВ и мониторинг гибридных сред:} по мере миграции инфраструктуры в облако, СОВ также адаптируются. Появились решения для мониторинга облачных сред (IaaS, PaaS, SaaS), контейнеров и serverless-вычислений. Современные платформы способны собирать и анализировать события как из локальной, так и из облачной инфраструктуры, предоставляя единую картину безопасности в гибридной среде.
+    \item \textbf{Автоматизация и оркестрация реагирования (SOAR):} как было упомянуто ранее, пассивного обнаружения уже недостаточно. Современные СОВ тесно интегрируются с платформами SOAR. При обнаружении инцидента SIEM или XDR может автоматически запустить сценарий реагирования: изолировать хост от сети, заблокировать учетную запись, удалить вредоносное письмо -- все это без прямого вмешательства аналитика, что сокращает время реагирования с часов до минут.
+    \item \textbf{Переход от IDS/SIEM к XDR:} наблюдается тренд смещения от разрозненных IDS и классических SIEM к интегрированным XDR-платформам. XDR объединяет глубокую телеметрию с конечных точек, сети и облаков, предоставляя более полный контекст для обнаружения и расследования сложных атак.
+    \item \textbf{Глубокая интеграция с Threat Intelligence:} современные системы активно используют внешние потоки данных об угрозах. Это позволяет обогащать внутренние события информацией об актуальных индикаторах компрометации, тактиках и инструментах атакующих, что значительно повышает точность и скорость обнаружения.
+    \item \textbf{Аппаратные решения (Appliance):} тенденция к созданию аппаратно-программных комплексов сохраняется. Специализированные решения для СОВ позволяют достигать высокой производительности, необходимой для анализа сетевого трафика на скоростях 10, 40, 100 Гбит/с и выше, что сложно реализовать на ПО общего назначения.
+\end{itemize}
 
 \subsubsection{Развитие теоретических аспектов СОВ}
 
-Дальнейшие направления совершенствования связаны с внедрением в теорию и практику СОВ
-общей теории систем, методов синтеза и анализа информационных систем, конкретного аппарата
-теории распознавания образов. Эти разделы теории предполагают получение конкретных методов
-исследования для области систем СОВ.
+Дальнейшее совершенствование СОВ неразрывно связано с развитием их теоретической базы. Хотя создание универсальной формальной модели, описывающей все аспекты безопасности, является крайне сложной задачей, исследования в этой области продолжаются по нескольким ключевым направлениям \autocite{IDSBranitsky}:
 
-До настоящего времени не описана СОВ как подсистема информационной системы в терминах
-общей теории систем. Необходимо обосновать показатель качества СОВ, элементный состав
-СОВ, ее структуру и взаимосвязи с информационной системой.
+\begin{itemize}
+    \item \textbf{Формальное моделирование атак и защиты:} разработка формальных языков и моделей (например, графов атак, деревьев атак) для описания многоэтапных атак. Такие модели позволяют не просто реагировать на отдельные события, а понимать всю цепочку действий злоумышленника. Это, в свою очередь, дает возможность теоретически обосновать оптимальные точки для применения защитных мер.
+    \item \textbf{Состязательное машинное обучение (Adversarial ML):} по мере роста популярности ML в системах безопасности, возникло и новое теоретическое направление -- исследование атак на сами ML-модели. Изучаются способы <<отравления>> обучающих данных (data poisoning) или создания таких входных данных, которые <<обманывают>> модель при обнаружении (evasion attacks). Разработка теоретических основ для создания более устойчивых к таким атакам ML-моделей является одной из важнейших задач.
+    \item \textbf{Метрики и стандартизация оценки:} одной из давних проблем является отсутствие стандартных, общепринятых метрик и наборов данных для объективного сравнения эффективности различных СОВ. Старые датасеты, такие как KDD-99, уже не отражают реалий современных атак. Ведутся теоретические и практические работы по созданию новых, более реалистичных фреймворков для тестирования и оценки СОВ, которые бы учитывали не только точность обнаружения, но и скорость, стоимость и устойчивость к обходу.
+    \item \textbf{Проблема приватности при мониторинге:} глубокий мониторинг активности пользователей и систем для выявления аномалий вступает в противоречие с необходимостью соблюдения приватности. В связи с этим развиваются теоретические подходы, позволяющие анализировать данные без их полной <<расшифровки>>, например, с использованием дифференциальной приватности или гомоморфного шифрования в задачах анализа безопасности.
+\end{itemize}
 
-В связи с наличием значительного количества факторов различной природы, слаженная работа
-информационной системы и СОВ имеет вероятностный характер. Вследствие этого актуальным
-является обоснование вида вероятностных законов конкретных параметров функционирования.
-Особо следует выделить задачу обоснования функции потерь информационной системы, задаваемую
-в соответствии с ее целевой функцией на области параметров функционирования системы.
-При этом целевая функция должна быть определена не только на экспертном уровне, но и в
-соответствии с совокупностью параметров функционирования всей информационной системы и
-задачами, возложенными на нее. В таком случае показатель качества СОВ будет определяться
-как один из параметров, влияющих на целевую функцию, а его допустимые значения --
-допустимыми значениями функции потерь.
-
-После обоснования законов и функций, реальной задачей является получение оптимальной
-структуры СОВ в виде совокупности математических операций с помощью формализованных
-методов. Таким образом, может быть решена задача синтеза структуры СОВ. На основе
-полученных математических операций можно будет рассчитать зависимости показателей
-качества функционирования СОВ от параметров ее функционирования, а также от параметров
-функционирования информационной системы, то есть, будет возможен реальный анализ качества
-функционирования СОВ.
-
-Сложность применения формализованного аппарата анализа и синтеза информационных систем
-к СОВ заключается в том, что конкретные реализации информационного комплекса и его
-подсистемы - СОВ состоят из разнородных элементов, которые могут описываться различными
-разделами теории (системами массового обслуживания, конечными автоматами, теорией
-вероятности, теорией распознавания образов и т.д.), то есть, рассматриваемый объект
-исследования является составным. В результате, математические модели, по-видимому,
-можно получить только для отдельных составных частей СОВ, что затрудняет анализ и
-синтез СОВ в целом. Однако, дальнейшая конкретизация применения формализованного
-аппарата анализа и синтеза позволит оптимизировать СОВ.
-
-На основе изложенного можно сделать вывод о наличии в практической среде значительного опыта
-решения проблем обнаружения вторжений. Применяемые СОВ в значительной степени основаны на
-эмпирических схемах процесса обнаружения вторжений. Дальнейшее совершенствование СОВ связано
-с конкретизацией методов синтеза и анализа сложных систем, теории распознавания образов в
-применении к СОВ.
+Таким образом, на основе изложенного можно сделать вывод о наличии в практической среде значительного опыта решения проблем обнаружения вторжений. Применяемые СОВ в значительной степени основаны на эмпирических схемах процесса обнаружения вторжений. Дальнейшее совершенствование СОВ связано как с развитием практических технологий (AI/ML, XDR), так и с конкретизацией методов синтеза и анализа сложных систем, теории распознавания образов и формальных моделей безопасности в применении к СОВ.
