--- a/bibliography.bib
+++ b/bibliography.bib
@@ -89,14 +89,14 @@
     author  = {{Dodo Engineering}},
     title   = {{Как сервера договариваются друг с другом: алгоритм распределённого консенсуса Raft}},
     url     = {https://habr.com/ru/companies/dododev/articles/469999/},
-    urldate = {2025-06-7}
+    urldate = {2025-06-07}
 }
 
 @online{paxos,
     author  = {{OTUS}},
     title   = {{Кратко про Raft и Paxos: путь к надежным распределенным базам данных}},
     url     = {https://habr.com/ru/companies/otus/articles/793198/},
-    urldate = {2025-06-7}
+    urldate = {2025-06-07}
 }
 
 @online{Consensus,
@@ -303,7 +303,7 @@
 @online{PoS_PoW,
     title = {{Алгоритмы Proof of Work и Proof of Stake}},
     url = {https://fin-plan.org/blog/algoritmy-proof-of-work-pow-i-proof-of-stake-pos},
-    urldate = {2025-04-7}
+    urldate = {2025-04-07}
 }
 
 @online{PostrgreSQL,
@@ -1091,7 +1091,7 @@
 @online{SecureFix,
 	title = {{Вопросы разграничения доступа к данным в СУБД}},
 	url = {https://koapp.narod.ru/tehlit/base/bd/dbms.htm},
-	urldate = {2025-04-7}
+	urldate = {2025-04-07}
 }
 
 @article{PhysLogPeplic,
@@ -2175,5 +2175,13 @@
     title = {CAP theorem},
     author = {{IBM Think Blog}},
     url = {https://www.ibm.com/think/topics/cap-theorem},
+    urldate = {2025-06-08}
+}
+
+@online{Corbett,
+    author = {James C. Corbett and Jeffrey Dean and Michael Epstein and others},
+    title = {Spanner: Google's Globally-Distributed Database},
+    year = {2012},
+    url = {https://research.google.com/archive/spanner-osdi2012.pdf},
     urldate = {2025-06-08}
 }
