--- a/part/basis/criteria.tex
+++ b/part/basis/criteria.tex
@@ -698,19 +698,32 @@
 		\item \textbf{Идентификация и аутентификация}\\
 		Требование для идентификации и аутентификации не изменяется в данном документе и применяется так, как указано в TCSEC.
 		\item \textbf{Аудит}\\
-		Требования к аудиту в TCSEC применяются также и к СУБД. TCB должен быть способен вести аудит доступов и попыток доступа к объектам, находящимся под защитой мандатной и дискреционной политик безопасности.
-		% -------------------------------------------------
-		% TODO: fill out the list according to the Purple Book
-		% also check https://www.jetinfo.ru/informaczionnaya-bezopasnost-obzor-osnovnyh-polozhenij-chast-1/
-		% and https://dorlov.blogspot.com/2010/01/issp-03-8.html
-		% -------------------------------------------------
+		Требования к аудиту в TCSEC применяются также и к СУБД. TCB должен быть способен вести аудит доступов и попыток доступа к объектам, находящимся под защитой мандатной и дискреционной политик безопасности. TDI уточняет, что в контексте СУБД аудит должен применяться к объектам, специфичным для баз данных (а не только к файлам операционной системы), и оперировать терминами, понятными администратору БД \cite[IR-4]{PurpleBook}. 
+		TCB СУБД должен обеспечивать возможность регистрации как минимум следующих событий \cite[Section 4.2.2]{PurpleBook}:
+		\begin{itemize}
+			\item \textbf{Введение объектов в адресное пространство пользователя.} В контексте СУБД это означает не только запуск программ, но и успешное выполнение команд, предоставляющих доступ к данным (например, \texttt{SELECT}, открытие курсора, выполнение хранимой процедуры).
+			\item \textbf{Создание и удаление объектов СУБД.} Должны регистрироваться события создания и удаления объектов, таких как таблицы (\texttt{CREATE TABLE}, \texttt{DROP TABLE}), представления (\texttt{CREATE VIEW}, \texttt{DROP VIEW}), индексы и т.д.
+			\item \textbf{Действия привилегированных пользователей.} Все действия администраторов баз данных (DBA), администраторов безопасности и других пользователей с особыми привилегиями должны подлежать обязательному аудиту.
+			\item \textbf{Изменение прав доступа.} Попытки (успешные и неуспешные) изменения прав доступа к объектам СУБД с помощью команд типа \texttt{GRANT} и \texttt{REVOKE} должны регистрироваться.
+			\item \textbf{Неуспешные попытки доступа.} Все отказы в доступе к объектам СУБД (таблицам, представлениям, строкам, столбцам) по причине нарушения политики безопасности должны быть зафиксированы в журнале аудита.
+		\end{itemize}
+		Для каждого регистрируемого события запись в журнале аудита должна содержать идентификатор пользователя СУБД (а не только пользователя ОС), время события, тип события, имя объекта, уровень его конфиденциальности (для систем класса B1 и выше) и результат (успех/неудача) \cite[Section 4.2.2]{PurpleBook}.
 	\end{itemize}
 \end{enumerate}
 
 \subsubsection{Оценка надежности СУБД как компоненты вычислительной системы}
-    %
-	% TODO: Seems to be Appendix B from \cite{PurpleBook}
-	%
+Когда СУБД работает поверх операционной системы, возникает вопрос, как оценивать безопасность всей системы в целом. СУБД не может обеспечить более высокий уровень безопасности, чем тот, который предоставляет лежащая в ее основе операционная система. Приложение B <<Пурпурной книги>> \cite[Appendix B]{PurpleBook} описывает два основных подхода к оценке СУБД как компонента доверенной вычислительной базы (TCB).
+
+\begin{enumerate}
+	\item \textbf{Подход подмножества TCB (TCB Subset).} При этом подходе СУБД рассматривается как неотъемлемая часть TCB операционной системы. Код СУБД и код ОС образуют единую доверенную вычислительную базу. Это означает, что все компоненты СУБД, отвечающие за безопасность, должны удовлетворять тем же строгим требованиям к архитектуре, проектированию и верификации, что и ядро операционной системы. Этот подход требует очень тесной интеграции между СУБД и ОС и на практике применяется редко из-за своей чрезвычайной сложности \cite[Appendix B]{PurpleBook}.
+	\item \textbf{Подход многоуровневой TCB (Layered TCB Product).} Это наиболее распространенный и прагматичный подход. TCB разделяется на два уровня:
+	\begin{itemize}
+		\item \textbf{Базовая TCB:} Функции безопасности, предоставляемые операционной системой (например, изоляция процессов, базовая защита файлов, идентификация и аутентификация пользователей ОС).
+		\item \textbf{TCB СУБД:} Функции безопасности, реализованные в самой СУБД (например, гранулярный контроль доступа к таблицам и строкам, управление транзакциями, аудит на уровне запросов).
+	\end{itemize}
+	При таком подходе TCB СУБД полагается на механизмы защиты базовой TCB (ОС). Оценка безопасности СУБД проводится с учетом того, что она функционирует в среде, защищенной сертифицированной ОС. Итоговый класс безопасности всей системы (ОС + СУБД) не может быть выше класса безопасности базовой операционной системы. Например, невозможно построить систему класса B2, установив СУБД класса B2 на операционную систему класса C2. Фундамент (ОС) определяет максимально достижимый уровень доверия \cite[Appendix B]{PurpleBook}.
+\end{enumerate}
+
 \subsubsection{Монитор ссылок}
 Монитор обращений (reference monitor) – это абстрактная машина, являющаяся посредником, через которого проходят все обращения субъектов к объектам. Монитор обращений проверяет, что субъекты имеют необходимые права доступа, защищая объекты от несанкционированного доступа и изменения.
 Чтобы система достигла высокого уровня доверия, необходимо, чтобы субъекты (программы, пользователи и процессы) были полностью авторизованы перед их доступом к объектам (файлам, программам и ресурсам).
@@ -727,15 +740,26 @@
 \end{itemize}
 
 \subsubsection{Применение TCSEC к СУБД непосредственно}
-	%
-	%	TODO:
-	% 	How TCSEC can be applied to DBMS
-	%
+Прямое применение критериев TCSEC, разработанных в первую очередь для операционных систем, к системам управления базами данных сопряжено со значительными трудностями. Эти трудности и послужили причиной создания специализированной интерпретации (TDI) \cite{PurpleBook}. Основные проблемы, требующие такой интерпретации, заключаются в следующем \cite[Introduction, Section 1]{PurpleBook}:
+	
+\begin{itemize}
+	\item \textbf{Гранулярность объектов.} В ОС основным объектом защиты является файл --- относительно крупная и однородная единица информации. В СУБД объекты защиты гораздо более разнообразны и гранулярны: базы данных, схемы, таблицы, представления (views), столбцы, строки, хранимые процедуры, триггеры. Применение единого подхода к маркировке и контролю доступа для столь разнородных объектов требует специальной интерпретации.	
+	\item \textbf{Семантика доступа.} В ОС типы доступа просты: чтение, запись, исполнение. В СУБД семантика доступа намного богаче: \texttt{SELECT}, \texttt{INSERT}, \texttt{UPDATE}, \texttt{DELETE}, \texttt{REFERENCES} (право ссылаться по внешнему ключу), \texttt{EXECUTE} (для процедур) и другие. Правила контроля доступа должны учитывать эту сложную семантику.
+	\item \textbf{Различие между данными и метаданными.} СУБД управляет не только пользовательскими данными, но и метаданными (системным каталогом), которые описывают структуру самой базы данных. Защита целостности метаданных является критически важной задачей, так как их компрометация может привести к обходу всех механизмов защиты данных. TCSEC не акцентирует внимание на этом разделении в явном виде.
+	\item \textbf{Концепция пользователя.} В ОС пользователь напрямую взаимодействует с системой. В СУБД все запросы от множества пользователей обрабатываются одним или несколькими серверными процессами ОС. С точки зрения ОС, субъектом является процесс сервера СУБД, а не конечный пользователь. Таким образом, СУБД должна самостоятельно реализовывать механизмы идентификации, аутентификации и аудита для своих <<внутренних>> пользователей.
+	\item \textbf{Проблема логического вывода (Inference)..} Структурированная природа данных в СУБД создает угрозу логического вывода, когда пользователь, имеющий доступ только к несекретным данным, может путем анализа связей и агрегации получить секретную информацию. Эта проблема для СУБД стоит гораздо острее, чем для файловых систем ОС, и требует специальных механизмов противодействия, не описанных в TCSEC.
+\end{itemize}
+
 \subsubsection{Элементы СУБД, к которым применяются TDI: метки, аудит, архитектура системы, спецификация, верификация, проектная документация}
-	%
-	% TODO: seems to be IR3 --- IR6 from PurpleBook
-	%
-	\cite{PurpleBook} IR-3 -- IR-6
+
+<<Пурпурная книга>> в разделах с IR-3 по IR-6 дает конкретные интерпретации требований TCSEC для ключевых аспектов СУБД \cite{PurpleBook}.
+\begin{itemize}
+	\item \textbf{IR-3: Метки (Labels).} TDI подтверждает, что требование TCSEC о присвоении меток безопасности всем объектам хранения применимо и к СУБД. Ключевая интерпретация заключается в понятии \textbf{гранулярности меток}. Разработчик СУБД должен определить, на каком уровне детализации будут применяться метки: на уровне всей базы данных, отдельных таблиц, строк (row-level security) или даже отдельных столбцов. TDI не предписывает конкретный уровень, но требует, чтобы выбранный уровень был четко задокументирован, а мандатный контроль доступа последовательно применялся на этом уровне \cite[IR-3]{PurpleBook}.
+	\item \textbf{IR-4: Аудит (Audit).} Эта интерпретация уточняет, что система аудита СУБД должна оперировать в терминах объектов и действий, специфичных для баз данных. Недостаточно просто регистрировать доступ к файлам БД на уровне ОС. Журнал аудита должен фиксировать, какой именно пользователь СУБД (а не какой процесс ОС) выполнил определенный SQL-запрос (\texttt{SELECT}, \texttt{UPDATE} и т.д.) к конкретной таблице, представлению или процедуре. Аудит должен быть способен отслеживать действия на том же уровне гранулярности, на котором реализован контроль доступа \cite[IR-4]{PurpleBook}.
+	\item \textbf{IR-5: Архитектура системы (System Architecture).} Требования TCSEC к архитектуре TCB (модульность, минимизация, изоляция) интерпретируются для СУБД следующим образом: поскольку СУБД часто представляет собой один большой процесс с точки зрения ОС, ее \textbf{внутренняя архитектура} должна быть структурирована так, чтобы реализовывать концепцию монитора ссылок. Должны быть четко выделены модули, составляющие TCB СУБД (например, парсер запросов, оптимизатор, исполнитель, менеджер доступа). Эти модули должны быть изолированы от остальной части кода СУБД и реализовывать принцип наименьших привилегий, чтобы обеспечить посредничество при всех обращениях логических субъектов (пользователей БД) к логическим объектам (таблицам, строкам) \cite[IR-5]{PurpleBook}.
+	\item \textbf{IR-6: Спецификация, верификация и проектная документация (Design Specification, Verification, and Documentation).} Согласно этой интерпретации, формальная модель политики безопасности, спецификации и прочая проектная документация, требуемая TCSEC для высоких классов защищенности (B2 и выше), должна описывать именно \textbf{TCB СУБД}. Документация должна четко определять политику безопасности в терминах СУБД (например, правила Bell-LaPadula, применяемые к таблицам и строкам), описывать интерфейс TCB СУБД (например, API для выполнения запросов) и демонстрировать, как внутренняя архитектура СУБД соответствует формальной спецификации. Верификация должна доказывать, что внутренний монитор ссылок СУБД корректно реализует заявленную политику безопасности \cite[IR-6]{PurpleBook}.
+\end{itemize}
+
 \subsubsection{Критерии безопасности ГТК/ФСТЭК}
 
 Некоторое время ФСТЭК (в прошлом ГТК, до 2004 г.) использовал критерии безопасности баз данных, заданные документом <<Безопасность информационных технологий. Критерии оценки безопасности информационных технологий>> от 19.06.02 г. № 187. Этот документ был разработан в ГТК и сейчас выведен из употребления. \cite{GTK187}
