fix: Исправил проблему со ссылками

--- a/part/concept.tex
+++ b/part/concept.tex
@@ -386,7 +386,7 @@
 \clearpage
 
 \subsection{Модели и принципы многоуровневой защиты}
-Как уже было сказано, безопасность системы зависит от защиты на всех уровнях: от сетевой инфраструктуры (см. раздел \ref{pon:urovs}) до соответствия нормативным требованиям (см. раздел \ref{pon:bez}). Анализ успешных решений в области информационной безопасности позволяет сформулировать несколько ключевых принципов, которыми следует руководствоваться при проектировании систем защиты \autocite{Smirnov2007}:
+Как уже было сказано, безопасность системы зависит от защиты на всех уровнях: от сетевой инфраструктуры до соответствия нормативным требованиям. Анализ успешных решений в области информационной безопасности позволяет сформулировать несколько ключевых принципов, которыми следует руководствоваться при проектировании систем защиты \autocite{Smirnov2007}:
 \begin{itemize}
 	\item \textbf{Экономическая оправданность механизмов защиты.} Проект должен обеспечивать необходимый уровень безопасности, оставаясь в рамках бюджета.
 	\item \textbf{Открытое проектирование.} Безопасность системы не должна зависеть от секретности ее алгоритмов, а только от секретности ключей.
