fix: сделал везде правильное выделение

--- a/part/concept.tex
+++ b/part/concept.tex
@@ -16,7 +16,7 @@
 
 При формулировке основных понятий и определений будем полагать, что защищаемым объектом является не сама БД или экспертная система, а компьютерная система (КС) в целом. Понятие защиты применимо не только к сохраняемым данным. Бреши в системе защиты могут возникать и в других частях системы, например, линии связи, что в свою очередь, подвергает опасности и собственно БД. Следовательно, защита БД должна охватывать используемое оборудование, программное обеспечение, персонал и собственно данные \autocite[сс. 15-18]{Skakun}. 
 
-Информационная безопасность, согласно ГОСТ Р 50922—2006, – это состояние защищенности информации и поддерживающей инфраструктуры от случайных или преднамеренных воздействий естественного или искусственного характера, которое чревато нанесением ущерба владельцам или пользователям информации и поддерживающей инфраструктуры \autocite{GOST50922}. В основе обеспечения безопасности лежит управление тремя ключевыми свойствами данных, известными как **триада безопасности CIA** (Confidentiality, Integrity, Availability):
+Информационная безопасность, согласно ГОСТ Р 50922—2006, – это состояние защищенности информации и поддерживающей инфраструктуры от случайных или преднамеренных воздействий естественного или искусственного характера, которое чревато нанесением ущерба владельцам или пользователям информации и поддерживающей инфраструктуры \autocite{GOST50922}. В основе обеспечения безопасности лежит управление тремя ключевыми свойствами данных, известными как \textbf{триада безопасности CIA} (Confidentiality, Integrity, Availability):
 
 \begin{itemize}
     \item \textbf{Конфиденциальность} - это свойство информации быть известной только допущенным и прошедшим проверку субъектам системы \autocite[сс. 15-18]{Skakun}. Это гарантия того, что данные не будут раскрыты неавторизованным лицам.
@@ -44,7 +44,7 @@
 \begin{grayquote}
 \textbf{Угроза информационной безопасности} - это осуществляемое или потенциально осуществимое воздействие на компьютерную систему, которое прямо или косвенно может нанести ущерб безопасности информации \autocite[с. 19]{Skakun}.
 \end{grayquote}
-Угрозы принято классифицировать по разным признакам. **По источнику возникновения** они делятся на внутренние (ошибки персонала, сбои оборудования) и внешние (хакерские атаки, вирусы) \autocite{Ytebov2008}. **По объекту воздействия** угрозы можно разделить на уровни технологического стека, в котором они возникают. Такой подход особенно важен для комплексной защиты, так как уязвимость на одном уровне может скомпрометировать всю систему.
+Угрозы принято классифицировать по разным признакам. \textbf{По источнику возникновения} они делятся на внутренние (ошибки персонала, сбои оборудования) и внешние (хакерские атаки, вирусы) \autocite{Ytebov2008}. \textbf{По объекту воздействия} угрозы можно разделить на уровни технологического стека, в котором они возникают. Такой подход особенно важен для комплексной защиты, так как уязвимость на одном уровне может скомпрометировать всю систему.
 
 \subsubsection{Классификация угроз по уровням}
 Угрозы безопасности компьютерной системы (КС) можно условно разделить на три основных уровня \autocite{Lihonosov2011}:
@@ -98,7 +98,7 @@
 \end{itemize}
 
 \subsubsection{Нормативно-правовые требования в Российской Федерации}
-В России требования к защите информации в значительной степени регулируются нормативными актами Федеральной службы по техническому и экспортному контролю (ФСТЭК). Для государственных информационных систем (ГИС) и систем, обрабатывающих персональные данные, ключевым является **Приказ ФСТЭК России №17** \autocite{fstec17}. Для значимых объектов критической информационной инфраструктуры (КИИ) — **Приказ ФСТЭК России №239** \autocite{FSTEKOBKIS}.
+В России требования к защите информации в значительной степени регулируются нормативными актами Федеральной службы по техническому и экспортному контролю (ФСТЭК). Для государственных информационных систем (ГИС) и систем, обрабатывающих персональные данные, ключевым является \textbf{Приказ ФСТЭК России №17} \autocite{fstec17}. Для значимых объектов критической информационной инфраструктуры (КИИ) — \textbf{Приказ ФСТЭК России №239} \autocite{FSTEKOBKIS}.
 
 Эти документы определяют многоуровневую структуру защиты и предписывают реализацию конкретных организационных и технических мер. В контексте автоматизированных систем управления, к которым относятся и СУБД, выделяются следующие объекты защиты:
 \begin{enumerate}
@@ -171,7 +171,7 @@
 Документы, регламентирующие меры безопасности, должны четко определять область их применения, ответственность сотрудников и дисциплинарные меры за нарушение установленных правил. Таким образом, для минимизации риска несанкционированного доступа необходима реализация комплекса нормативных, организационных и технических мер.
 
 \subsection{Управление доступом и привилегии}
-После того как система установила личность пользователя (аутентификация), наступает этап авторизации — определение того, какие действия этому пользователю разрешено выполнять. В основе управления доступом лежит **принцип минимальных привилегий** (Principle of Least Privilege, PoLP) \autocite{oracledbdoc3}. Его суть заключается в том, что любому субъекту системы (пользователю или процессу) должны предоставляться только те права, которые минимально необходимы для выполнения его задач. Этот принцип минимизирует потенциальный ущерб от случайных ошибок или злонамеренных действий.
+После того как система установила личность пользователя (аутентификация), наступает этап авторизации — определение того, какие действия этому пользователю разрешено выполнять. В основе управления доступом лежит \textbf{принцип минимальных привилегий} (Principle of Least Privilege, PoLP) \autocite{oracledbdoc3}. Его суть заключается в том, что любому субъекту системы (пользователю или процессу) должны предоставляться только те права, которые минимально необходимы для выполнения его задач. Этот принцип минимизирует потенциальный ущерб от случайных ошибок или злонамеренных действий.
 
 \begin{grayquote}
 	\textbf{Привилегия} – это разрешение на выполнение в системе определенного действия. Не имея соответствующей привилегии, пользователь не может получить доступ к данным или выполнить какое-либо действие \autocite{Smirnov2007}.
@@ -191,7 +191,7 @@
     \end{itemize}
 \end{itemize}
 
-Управление привилегиями напрямую является сложной задачей. Поэтому в современных СУБД широко применяется **ролевая модель доступа (RBAC)**, где привилегии группируются в роли (например, <<Бухгалтер>>, <<Аналитик>>), а уже роли назначаются пользователям. Этот подход, который будет подробнее рассмотрен в главе 2, значительно упрощает администрирование прав доступа.
+Управление привилегиями напрямую является сложной задачей. Поэтому в современных СУБД широко применяется \textbf{ролевая модель доступа (RBAC)}, где привилегии группируются в роли (например, <<Бухгалтер>>, <<Аналитик>>), а уже роли назначаются пользователям. Этот подход, который будет подробнее рассмотрен в главе 2, значительно упрощает администрирование прав доступа.
 
 \subsection{Целостность БД}
 Под понятием целостности данных понимается их точность, непротиворечивость и согласованность в течение всего жизненного цикла \autocite[с. 18]{Skakun}. Важно различать целостность (consistency) и достоверность (accuracy) данных. Достоверность означает соответствие данных реальному миру, тогда как целостность гарантирует, что данные в базе соответствуют заданным правилам и ограничениям, исключая логически невозможные состояния \autocite{ElmasriNavathe}.
@@ -199,9 +199,9 @@
 Контроль целостности — это одна из ключевых функций СУБД, которая обеспечивает неизменность данных при случайных или преднамеренных искажениях. В реляционных базах данных выделяют несколько основных видов логической целостности \autocite{Silberschatz}:
 
 \begin{itemize}
-    \item \textbf{Целостность сущностей (Entity Integrity).} Гарантирует, что каждая строка в таблице является уникальной. Этот вид целостности обеспечивается с помощью **первичного ключа (PRIMARY KEY)**, который не может содержать повторяющихся или NULL-значений.
+    \item \textbf{Целостность сущностей (Entity Integrity).} Гарантирует, что каждая строка в таблице является уникальной. Этот вид целостности обеспечивается с помощью \textbf{первичного ключа (PRIMARY KEY)}, который не может содержать повторяющихся или NULL-значений.
     
-    \item \textbf{Ссылочная целостность (Referential Integrity).} Обеспечивает согласованность связей между таблицами. Если в одной таблице есть значение, которое ссылается на запись в другой таблице, то эта запись должна существовать. Реализуется с помощью **внешних ключей (FOREIGN KEY)**.
+    \item \textbf{Ссылочная целостность (Referential Integrity).} Обеспечивает согласованность связей между таблицами. Если в одной таблице есть значение, которое ссылается на запись в другой таблице, то эта запись должна существовать. Реализуется с помощью \textbf{внешних ключей (FOREIGN KEY)}.
     
     \item \textbf{Целостность домена (Domain Integrity).} Ограничивает тип, формат и диапазон допустимых значений для столбца. Этот вид целостности обеспечивается через:
     \begin{itemize}
@@ -211,10 +211,10 @@
         \item ограничение `CHECK`, задающее произвольное логическое условие для значений.
     \end{itemize}
     
-    \item \textbf{Пользовательская целостность (User-Defined Integrity).} Включает специфические бизнес-правила, которые не могут быть выражены стандартными ограничениями. Такие правила обычно реализуются с помощью **триггеров**.
+    \item \textbf{Пользовательская целостность (User-Defined Integrity).} Включает специфические бизнес-правила, которые не могут быть выражены стандартными ограничениями. Такие правила обычно реализуются с помощью триггеров.
 \end{itemize}
 
-Мы уже обсуждали основные угрозы целостности в разделе \ref{ugr:cel}. Для их предотвращения и применяются перечисленные механизмы. Теоретической основой для реализации более сложных политик целостности служат такие модели, как модель **Кларка-Вильсона** и модель **Биба**, которые будут рассмотрены в главе 1.8.
+Мы уже обсуждали основные угрозы целостности в разделе \ref{ugr:cel}. Для их предотвращения и применяются перечисленные механизмы. Теоретической основой для реализации более сложных политик целостности служат такие модели, как модель \textbf{Кларка-Вильсона} и модель \textbf{Биба}, которые будут рассмотрены в главе 1.8.
 
 \subsection{Аудит безопасности}
 
@@ -396,7 +396,7 @@
 	\item \textbf{Психологическая приемлемость.} Средства защиты должны быть интуитивно понятными и не создавать излишних сложностей для пользователей.
 \end{itemize}
 
-Реализация этих принципов на практике достигается с помощью формальных **моделей контроля доступа**. Эти модели определяют, как система принимает решения о предоставлении или запрете доступа субъектов к объектам.
+Реализация этих принципов на практике достигается с помощью формальных \textbf{моделей контроля доступа}. Эти модели определяют, как система принимает решения о предоставлении или запрете доступа субъектов к объектам.
 
 \subsubsection{Модели контроля доступа}
 Существует три классические модели контроля доступа, которые служат основой для построения систем разграничения доступа в СУБД \autocite{Tanenbaum}:
@@ -420,7 +420,7 @@
 Эти три процедуры являются обязательным элементом любой защищенной ИС, реализуя первый рубеж защиты информации.
 
 \subsubsection{Что: Права доступа и матрица доступа}
-После того как субъект авторизован, система должна знать, какие именно действия (`что`) ему разрешено выполнять с различными объектами. Эти разрешения формализуются в виде прав доступа. Классическим способом теоретического представления этих прав является **матрица доступа** \autocite{Tanenbaum}.
+После того как субъект авторизован, система должна знать, какие именно действия (`что`) ему разрешено выполнять с различными объектами. Эти разрешения формализуются в виде прав доступа. Классическим способом теоретического представления этих прав является \textbf{матрица доступа} \autocite{Tanenbaum}.
 
 Матрица доступа — это абстрактная модель, представляющая собой таблицу, где:
 \begin{itemize}
